--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 15px;
+}
+
+.pricing-background {
+    background-image: url('/public/images/bg-top.svg');
+    background-size: auto;
+    background-position: top right;
+    background-repeat: no-repeat;
+}
+
+.bottom-background {
+    background-image: url('/public/images/bg-bottom.svg');
+    background-repeat: no-repeat;
+  background-position: left bottom;
+  background-size: 100%;
+
+}
