--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,9 @@ body {
 }
 
 .pricing-background {
-    background-image: url('/public/images/bg-top.svg');
+    background-image: url('/public/images/Desktop.jpg');
     background-size: auto;
-    background-position: top right;
+    /* background-position: top right; */
     background-repeat: no-repeat;
 }
 
